<resources>
    <string name="app_name">Fisica Ludica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_image_view_logo_description">app logo in the home fragment</string>
    <string name="home_fragment_image_button_start_description">image button for start to play</string>
    <string name="map_list_item_preview_card_image_of_the_map">Preview image of the map</string>
    <string name="game_fragment_target_description">Target to be hited</string>
    <string name="game_fragment_cannonball">cannonball</string>
    <string name="game_fragment_play_button">button to play the game</string>
    <string name="game_fragment_default_vo">Vo = 2 m/s</string>
    <string name="dialog_hint_pause_title">PAUSE</string>
    <string name="dialog_hint_pause_exit_button_string">X</string>
    <string name="dialog_hint_pause_default_textView_inside_scroll_area">Deafult hint for examle</string>
    <string name="dialog_hint_pause_textView_inside_scroll_area">%s</string>
    <string name="image_for_result_game_card">Image for representing the result of the game level</string>
    <string name="default_main_message_for_result_game">Parabens! voce concluiu o nivel atual e \nesta pronto para o proximo</string>
    <string name="default_secundary_message_for_result_game">A proxima fase acaba de ser liberada, vamos ver\nse consegue vencer mais um desafio</string>
    <string name="default_main_message_for_result_game_bad">Poxa, nao foi dessa vez.\nTalvez voce tenha errado os calculos</string>
    <string name="default_secundary_message_for_result_game_bad">Tente novamente, lembre-se que pode receber\ndicas clicando no ponto de interrogacao</string>

    <string name="back_to_map_list">back to map list</string>
    <string name="try_again">try again</string>
    <string name="go_to_map_list_imagebutton">go to map list imageButton</string>
    <string name="re_do_image_button">re do image button</string>
    <string name="question_mark_for_open_the_pause_dialog">question mark for open the pause dialog</string>
    <string name="back_button_arrow_for_the_navigation_menu">back button arrow for the navigation menu</string>
    <string name="arrow_to_get_the_next_hint_for_the_dialog_pause">arrow to get the next hint for the dialog pause
    </string>
    <string name="closing_button_for_the_pause_dialog">closing button for the pause dialog</string>
    <string name="arrow_to_get_the_previous_hint_for_the_dialog_pause">arrow to get the previous hint for the dialog
        pause
    </string>
    <string name="game_fragment_default_angle">angulo inicial = 45º</string>
    <string name="game_fragment_default_coordinate">coordenada (aX, bY)</string>
    <string name="game_fragment_coordinate">coordenada (%sX, %sY)</string>

    <string name="home_fragment_hint">Bem vindo ao Física Ludica, um jogo para voce exercitar seu conhecimento sobre
        Movimento em Duas Dimensoes
    </string>

    <string name="list_fragment_hint">Aqui voce deve selecionar uma fase para jogar, cada fase retrata uma situacao
        diferente de lancamento obliquo
    </string>
    <string name="auth_fragment_game_description">Bem vindo ao Fisica Ludica, um aplicativo
para voce treinar seus conhecimentos em
movimentos bidimensionais.

Aqui voce vai encontrar simulacoes
interativas de lancamento obliquo.
Faca o login e venha jogar
    </string>
    <string name="floating_button_for_leave_the_scene">floating_button_for_leave_the_scene</string>

</resources>