<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_hint_pause"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/dialog_hint_pause_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_hint_pause_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/games"
            />
    <ImageButton
            android:id="@+id/dialog_hint_pause_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"
            android:background="@android:color/transparent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_hint_pause_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_hint_pause_title"
            app:layout_constraintHorizontal_bias="0.743" android:contentDescription="@string/closing_button_for_the_pause_dialog"/>

    <ScrollView
            android:id="@+id/dialog_hint_pause_scroll_area"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_hint_pause_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

                <TextView
                        android:id="@+id/dialog_hint_pause_textview_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:fontFamily="@font/games"
                        android:text="@string/dialog_hint_pause_default_textView_inside_scroll_area"
                        />
    </ScrollView>

    <ImageButton
            android:id="@+id/dialog_hint_pause_next_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_right_alt_24"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/dialog_hint_pause_scroll_area"
            app:layout_constraintStart_toEndOf="@id/dialog_hint_pause_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/arrow_to_get_the_next_hint_for_the_dialog_pause"/>

    <ImageButton
            android:id="@+id/dialog_hint_pause_previus_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_right_alt_24"
            android:scaleX="-1"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/dialog_hint_pause_scroll_area"
            app:layout_constraintEnd_toStartOf="@id/dialog_hint_pause_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/arrow_to_get_the_previous_hint_for_the_dialog_pause"/>

</androidx.constraintlayout.widget.ConstraintLayout>