<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.AuthFragment"
        android:background="@drawable/background_green_yard_with_mountains"

>

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
            android:id="@+id/auth_fragmentscroll_area"
            android:layout_weight="1"
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/auth_fragment_logo_image"
            app:layout_constraintStart_toStartOf="@id/auth_fragment_logo_image"
            app:layout_constraintEnd_toEndOf="@id/auth_fragment_logo_image"
    >


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_fragment_game_description"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/games_italic"
                app:layout_constraintStart_toStartOf="@id/auth_fragment_logo_image"
                app:layout_constraintEnd_toEndOf="@+id/auth_fragment_logo_image"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/auth_fragment_logo_image"
                app:layout_constraintVertical_bias="0.1"/>
    </ScrollView>

    <ImageView
            android:id="@+id/auth_fragment_logo_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/logo_fisica_ludica"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/home_fragment_image_view_logo_description"
            app:layout_constraintHorizontal_bias="0.263"/>
    <ImageButton
            android:id="@+id/auth_fragment_start_image_button"
            android:layout_width="162dp"
            android:layout_height="63dp"
            android:background="@android:color/transparent"
            android:src="@drawable/start_button_170p_version"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/home_fragment_image_button_start_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/auth_fragmentscroll_area"/>

</androidx.constraintlayout.widget.ConstraintLayout>