<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_result_fragment_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.GameResultFragment"
        android:background="@android:color/holo_green_dark"
             >

    <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/game_result_fragment_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingHorizontal="8dp"
                android:background="@android:color/holo_green_light"
        >
            <ImageView
                    android:id="@+id/result_game_fragment_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/newton_perdedor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/image_for_result_game_card"/>
            <TextView
                    android:id="@+id/result_game_fragment_main_default_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/default_main_message_for_result_game"
                    app:layout_constraintTop_toBottomOf="@id/result_game_fragment_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView
                    android:id="@+id/result_game_fragment_secundary_default_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:textColor="@color/white"
                    android:text="@string/default_secundary_message_for_result_game"
                    app:layout_constraintTop_toBottomOf="@id/result_game_fragment_main_default_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />

            <ImageButton
                    android:id="@+id/result_game_fragment_back_to_list_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_fast_forward_35"
                    android:background="@android:color/transparent"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/result_game_fragment_secundary_default_message"
            />
            <TextView
                    android:id="@+id/result_game_fragment_back_to_list_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/back_to_map_list"
                    android:textSize="8sp"
                    android:paddingBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@id/result_game_fragment_back_to_list_button"
                    app:layout_constraintStart_toStartOf="@id/result_game_fragment_back_to_list_button"
                    app:layout_constraintEnd_toEndOf="@id/result_game_fragment_back_to_list_button"
            />
            <ImageButton
                    android:id="@+id/result_game_fragment_re_do_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_replay_35"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/result_game_fragment_secundary_default_message"
            />
            <TextView
                    android:id="@+id/result_game_fragment_re_do_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/try_again"
                    android:textSize="8sp"
                    android:paddingBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@id/result_game_fragment_re_do_button"
                    app:layout_constraintStart_toStartOf="@id/result_game_fragment_re_do_button"
                    app:layout_constraintEnd_toEndOf="@id/result_game_fragment_re_do_button"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>